# hand_of_gawd

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/blocked_iframe/: index.html
examples/safe_toggle/: index.html
examples/varied_page/: index.html
hand_of_gawd/: __init__.py  approval.py  contracts.py  executor.py  loop.py  policy.py  selenium_snapshot.py  trace.py  verifier.py
scripts/: hand_of_gawd_gate.py  hog_selenium_smoke.py
tests/: test_hand_of_gawd_approval.py  test_hand_of_gawd_contracts.py  test_hand_of_gawd_executor.py  test_hand_of_gawd_loop.py  test_hand_of_gawd_policy.py  test_hand_of_gawd_selenium_snapshot.py  test_hand_of_gawd_trace.py  test_hand_of_gawd_verifier.py  test_hog_selenium_smoke.py
