[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hand-of-gawd"
version = "0.1.0"
description = "Local-first safety-gated UI automation harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
selenium = ["selenium>=4"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires local browser automation tooling",
]
