[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hand-of-gawd"
version = "0.1.0"
description = "Local-first safety-gated UI automation harness."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
selenium = ["selenium>=4"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: requires local browser automation tooling",
]
